tests/c_headers/kernel.h


struct k_thread;
struct k_sem;
struct k_queue;
struct k_poll_event;
struct k_work_poll;
struct k_work;
struct k_work_q;
struct k_work_queue_config;
struct k_delayed_work;
struct k_sem {
	_wait_q_t wait_q;
	unsigned int count;
	unsigned int limit;
	sys_dlist_t poll_events; 
};
struct k_work_delayable;
struct k_work_sync;
typedef void (*k_work_handler_t)(struct k_work *work);
void k_work_init(struct k_work *work,
		  k_work_handler_t handler);
int k_work_busy_get(const struct k_work *work);
static inline bool k_work_is_pending(const struct k_work *work);
int k_work_submit_to_queue(struct k_work_q *queue,
			   struct k_work *work);
extern int k_work_submit(struct k_work *work);
bool k_work_flush(struct k_work *work,
		  struct k_work_sync *sync);
int k_work_cancel(struct k_work *work);
bool k_work_cancel_sync(struct k_work *work, struct k_work_sync *sync);
void k_work_queue_start(struct k_work_q *queue,
			k_thread_stack_t *stack, size_t stack_size,
			int prio, const struct k_work_queue_config *cfg);
enum {
	K_WORK_RUNNING_BIT = 0,
	K_WORK_CANCELING_BIT = 1,
	K_WORK_QUEUED_BIT = 2,
	K_WORK_DELAYED_BIT = 3,
	K_WORK_MASK = BIT(K_WORK_DELAYED_BIT) | BIT(K_WORK_QUEUED_BIT)
		| BIT(K_WORK_RUNNING_BIT) | BIT(K_WORK_CANCELING_BIT),
	K_WORK_DELAYABLE_BIT = 8,
	K_WORK_DELAYABLE = BIT(K_WORK_DELAYABLE_BIT),
	K_WORK_QUEUE_STARTED_BIT = 0,
	K_WORK_QUEUE_STARTED = BIT(K_WORK_QUEUE_STARTED_BIT),
	K_WORK_QUEUE_BUSY_BIT = 1,
	K_WORK_QUEUE_BUSY = BIT(K_WORK_QUEUE_BUSY_BIT),
	K_WORK_QUEUE_DRAIN_BIT = 2,
	K_WORK_QUEUE_DRAIN = BIT(K_WORK_QUEUE_DRAIN_BIT),
	K_WORK_QUEUE_PLUGGED_BIT = 3,
	K_WORK_QUEUE_PLUGGED = BIT(K_WORK_QUEUE_PLUGGED_BIT),
	K_WORK_QUEUE_NO_YIELD_BIT = 8,
	K_WORK_QUEUE_NO_YIELD = BIT(K_WORK_QUEUE_NO_YIELD_BIT),
	K_WORK_RUNNING = BIT(K_WORK_RUNNING_BIT),
	K_WORK_CANCELING = BIT(K_WORK_CANCELING_BIT),
	K_WORK_QUEUED = BIT(K_WORK_QUEUED_BIT),
	K_WORK_DELAYED = BIT(K_WORK_DELAYED_BIT),
};
struct k_work {
	sys_snode_t node;
	k_work_handler_t handler;
	struct k_work_q *queue;
	uint32_t flags;
};
struct k_work_delayable {
	struct k_work work;
	struct _timeout timeout;
	struct k_work_q *queue;
};
struct z_work_flusher {
	struct k_work work;
	struct k_sem sem;
};
struct z_work_canceller {
	sys_snode_t node;
	struct k_work *work;
	struct k_sem sem;
};
struct k_work_sync {
	union {
		struct z_work_flusher flusher;
		struct z_work_canceller canceller;
	};
};
struct k_work_queue_config {
	const char *name;
	bool no_yield;
};
struct k_work_q {
	struct k_thread thread;
	sys_slist_t pending;
	_wait_q_t notifyq;
	_wait_q_t drainq;
	uint32_t flags;
};
static inline bool k_work_is_pending(const struct k_work *work)
{
	return k_work_busy_get(work) != 0;
}
struct k_work_user;
typedef void (*k_work_user_handler_t)(struct k_work_user *work);
struct k_work_user_q {
	struct k_queue queue;
	struct k_thread thread;
};
struct k_work_user {
	void *_reserved;		
	k_work_user_handler_t handler;
	atomic_t flags;
};
struct k_work_poll {
	struct k_work work;
	struct k_work_q *workq;
	struct z_poller poller;
	struct k_poll_event *events;
	int num_events;
	k_work_handler_t real_handler;
	struct _timeout timeout;
	int poll_result;
};
struct k_poll_event;