src/zephyr_c/kernel/zk_work.nim


import ../zkernel_fixes
import ../zsys_clock
import ../zthread
import ../zatomic
import zk_sem
import zk_queue
import zk_poll

type

  k_work* {.importc: "k_work", header: "kernel.h", bycopy.} = object
    ## * @brief A structure used to submit work.
    node* {.importc: "node".}: sys_snode_t ##  All fields are protected by the work module spinlock.  No fields
                                        ##  are to be accessed except through kernel API.
                                        ##
                                        ##  Node to link into k_work_q pending list.
    ##  The function to be invoked by the work queue thread.
    handler* {.importc: "handler".}: k_work_handler_t ##  The queue on which the work item was last submitted.
    queue* {.importc: "queue".}: ptr k_work_q ##  State of the work item.
                                          ##
                                          ##  The item can be DELAYED, QUEUED, and RUNNING simultaneously.
                                          ##
                                          ##  It can be RUNNING and CANCELING simultaneously.
                                          ##
    flags* {.importc: "flags".}: uint32

  k_work_queue_config* {.importc: "k_work_queue_config", header: "kernel.h", bycopy.} = object
    ## * @brief A structure holding optional configuration items for a work
    ##  queue.
    ##
    ##  This structure, and values it references, are not retained by
    ##  k_work_queue_start().
    ##
    name* {.importc: "name".}: cstring ## * The name to be given to the work queue thread.
                                    ##
                                    ##  If left null the thread will not have a name.
                                    ##
    ## * Control whether the work queue thread should yield between
    ##  items.
    ##
    ##  Yielding between items helps guarantee the work queue
    ##  thread does not starve other threads, including cooperative
    ##  ones released by a work item.  This is the default behavior.
    ##
    ##  Set this to @c true to prevent the work queue thread from
    ##  yielding between items.  This may be appropriate when a
    ##  sequence of items should complete without yielding
    ##  control.
    ##
    no_yield* {.importc: "no_yield".}: bool

  k_work_q* {.importc: "k_work_q", header: "kernel.h", bycopy.} = object
    ## * @brief A structure used to hold work until it can be processed.
    thread* {.importc: "thread".}: k_thread ##  The thread that animates the work.
    ##  All the following fields must be accessed only while the
    ##  work module spinlock is held.
    ##
    ##  List of k_work items to be worked.
    pending* {.importc: "pending".}: sys_slist_t ##  Wait queue for idle work thread.
    notifyq* {.importc: "notifyq".}: z_wait_q_t ##  Wait queue for threads waiting for the queue to drain.
    drainq* {.importc: "drainq".}: z_wait_q_t ##  Flags describing queue state.
    flags* {.importc: "flags".}: uint32

  k_delayed_work * {.importc: "_timeout", header: "<kernel.h>", bycopy, incompleteStruct.} = object

  k_work_handler_t* = proc (work: ptr k_work) {.cdecl.}

  z_work_flusher* {.importc: "z_work_flusher", header: "kernel.h", bycopy.} = object
    ##  Record used to wait for work to flush.
    ##
    ##  The work item is inserted into the queue that will process (or is
    ##  processing) the item, and will be processed as soon as the item
    ##  completes.  When the flusher is processed the semaphore will be
    ##  signaled, releasing the thread waiting for the flush.
    work* {.importc: "work".}: k_work
    sem* {.importc: "sem".}: k_sem

  z_work_canceller* {.importc: "z_work_canceller", header: "kernel.h", bycopy.} = object
    ##  Record used to wait for work to complete a cancellation.
    ##
    ##  The work item is inserted into a global queue of pending cancels.
    ##  When a cancelling work item goes idle any matching waiters are
    ##  removed from pending_cancels and are woken.
    ##
    node* {.importc: "node".}: sys_snode_t
    work* {.importc: "work".}: ptr k_work
    sem* {.importc: "sem".}: k_sem

  k_work_delayable* {.importc: "k_work_delayable", header: "kernel.h", bycopy.} = object
    ## * @brief A structure used to submit work after a delay.
    work* {.importc: "work".}: k_work ##  The work item.
    ##  Timeout used to submit work after a delay.
    timeout* {.importc: "timeout".}: k_priv_timeout ##  The queue to which the work should be submitted.
    queue* {.importc: "queue".}: ptr k_work_q

  k_work_user* {.importc: "k_work_user", header: "kernel.h", incompleteStruct, bycopy.} = object
    # k_reserved* {.importc: "_reserved".}: pointer ##  Used by k_queue implementation.
    handler* {.importc: "handler".}: k_work_user_handler_t
    flags* {.importc: "flags".}: atomic_t

  k_work_poll* {.importc: "k_work_poll", header: "kernel.h", bycopy.} = object
    work* {.importc: "work".}: k_work
    workq* {.importc: "workq".}: ptr k_work_q
    poller* {.importc: "poller".}: z_poller
    events* {.importc: "events".}: ptr k_poll_event
    num_events* {.importc: "num_events".}: cint
    real_handler* {.importc: "real_handler".}: k_work_handler_t
    timeout* {.importc: "timeout".}: k_priv_timeout
    poll_result* {.importc: "poll_result".}: cint
  ##
  ## * @brief A structure holding internal state for a pending synchronous
  ##  operation on a work item or queue.
  ##
  ##  Instances of this type are provided by the caller for invocation of
  ##  k_work_flush(), k_work_cancel_sync() and sibling flush and cancel APIs.  A
  ##  referenced object must persist until the call returns, and be accessible
  ##  from both the caller thread and the work queue thread.
  ##
  ##  @note If CONFIG_KERNEL_COHERENCE is enabled the object must be allocated in
  ##  coherent memory; see arch_mem_coherent().  The stack on these architectures
  ##  is generally not coherent.  be stack-allocated.  Violations are detected by
  ##  runtime assertion.
  ##

  k_work_sync* {.importc: "k_work_sync", header: "kernel.h", incompleteStruct, bycopy.} = object
    # C union
    flusher* {.importc: "flusher".}: z_work_flusher # union 1
    canceller* {.importc: "canceller".}: z_work_canceller # union 2
    # end c union

  k_work_user_handler_t* = proc (work: ptr k_work_user)

  k_work_user_q* {.importc: "k_work_user_q", header: "kernel.h", bycopy.} = object
    queue* {.importc: "queue".}: k_queue
    thread* {.importc: "thread".}: k_thread

## * @brief Initialize a (non-delayable) work structure.
##
##  This must be invoked before submitting a work structure for the first time.
##  It need not be invoked again on the same work structure.  It can be
##  re-invoked to change the associated handler, but this must be done when the
##  work item is idle.
##
##  @funcprops \isr_ok
##
##  @param work the work structure to be initialized.
##
##  @param handler the handler to be invoked by the work item.
##
proc k_work_init*(work: ptr k_work; handler: k_work_handler_t) {.
    importc: "k_work_init", header: "kernel.h".}


## * @brief Busy state flags from the work item.
##
##  A zero return value indicates the work item appears to be idle.
##
##  @note This is a live snapshot of state, which may change before the result
##  is checked.  Use locks where appropriate.
##
##  @funcprops \isr_ok
##
##  @param work pointer to the work item.
##
##  @return a mask of flags K_WORK_DELAYED, K_WORK_QUEUED,
##  K_WORK_RUNNING, and K_WORK_CANCELING.
##
proc k_work_busy_get*(work: ptr k_work): cint {.importc: "k_work_busy_get",
    header: "kernel.h".}


## * @brief Test whether a work item is currently pending.
##
##  Wrapper to determine whether a work item is in a non-idle dstate.
##
##  @note This is a live snapshot of state, which may change before the result
##  is checked.  Use locks where appropriate.
##
##  @funcprops \isr_ok
##
##  @param work pointer to the work item.
##
##  @return true if and only if k_work_busy_get() returns a non-zero value.
##
proc k_work_is_pending*(work: ptr k_work): bool {.inline,
    importc: "k_work_is_pending", header: "kernel.h".}


## * @brief Submit a work item to a queue.
##
##  @param queue pointer to the work queue on which the item should run.  If
##  NULL the queue from the most recent submission will be used.
##
##  @funcprops \isr_ok
##
##  @param work pointer to the work item.
##
##  @retval 0 if work was already submitted to a queue
##  @retval 1 if work was not submitted and has been queued to @p queue
##  @retval 2 if work was running and has been queued to the queue that was
##  running it
##  @retval -EBUSY
##  * if work submission was rejected because the work item is cancelling; or
##  * @p queue is draining; or
##  * @p queue is plugged.
##  @retval -EINVAL if @p queue is null and the work item has never been run.
##  @retval -ENODEV if @p queue has not been started.
##
proc k_work_submit_to_queue*(queue: ptr k_work_q; work: ptr k_work): cint {.
    importc: "k_work_submit_to_queue", header: "kernel.h".}


## * @brief Submit a work item to the system queue.
##
##  @funcprops \isr_ok
##
##  @param work pointer to the work item.
##
##  @return as with k_work_submit_to_queue().
##
proc k_work_submit*(work: ptr k_work): cint {.importc: "k_work_submit",
    header: "kernel.h".}


## * @brief Wait for last-submitted instance to complete.
##
##  Resubmissions may occur while waiting, including chained submissions (from
##  within the handler).
##
##  @note Be careful of caller and work queue thread relative priority.  If
##  this function sleeps it will not return until the work queue thread
##  completes the tasks that allow this thread to resume.
##
##  @note Behavior is undefined if this function is invoked on @p work from a
##  work queue running @p work.
##
##  @param work pointer to the work item.
##
##  @param sync pointer to an opaque item containing state related to the
##  pending cancellation.  The object must persist until the call returns, and
##  be accessible from both the caller thread and the work queue thread.  The
##  object must not be used for any other flush or cancel operation until this
##  one completes.  On architectures with CONFIG_KERNEL_COHERENCE the object
##  must be allocated in coherent memory.
##
##  @retval true if call had to wait for completion
##  @retval false if work was already idle
##
proc k_work_flush*(work: ptr k_work; sync: ptr k_work_sync): bool {.
    importc: "k_work_flush", header: "kernel.h".}


## * @brief Cancel a work item.
##
##  This attempts to prevent a pending (non-delayable) work item from being
##  processed by removing it from the work queue.  If the item is being
##  processed, the work item will continue to be processed, but resubmissions
##  are rejected until cancellation completes.
##
##  If this returns zero cancellation is complete, otherwise something
##  (probably a work queue thread) is still referencing the item.
##
##  See also k_work_cancel_sync().
##
##  @funcprops \isr_ok
##
##  @param work pointer to the work item.
##
##  @return the k_work_busy_get() status indicating the state of the item after all
##  cancellation steps performed by this call are completed.
##
proc k_work_cancel*(work: ptr k_work): cint {.importc: "k_work_cancel",
    header: "kernel.h".}

